--- a/app/scss/_text.scss
+++ b/app/scss/_text.scss
@@ -31,7 +31,7 @@
   &-button {
     color: $darkestGray;
     font-size: rem(14px);
-    font-weight: 700;
+    font-weight: 400;
     line-height: 2;
   }
 
